updated video tours handling

--- a/GoEstates/properties/templates/property/video.html
+++ b/GoEstates/properties/templates/property/video.html
@@ -28,9 +28,12 @@
 
 <body>
     <h1>Hello, world!</h1>
-  <video width="320" height="240" controls>
-    <source src="{{video.video.url}}" type="video/mp4">
-  </video>
+    <div class="tab-pane fade show active" id="pills-video" role="tabpanel" aria-labelledby="pills-video-tab">
+        <video width="320" height="240" controls>
+            <source src="{{video.video.url}}" type="video/mp4">
+          </video>        
+    </div>
+
         
 
 
