--- a/GoEstates/properties/templates/property/details.html
+++ b/GoEstates/properties/templates/property/details.html
@@ -192,7 +192,7 @@
                     {% if video %}
                     <div class="tab-pane fade show active" id="pills-video" role="tabpanel" aria-labelledby="pills-video-tab">
                         <video width="100%" height="460" controls>
-                            <source src="{{video.video.url}}" type="video/mp4">
+                            <source src="{{video.video.url}}">
                           </video>
                     </div>
                     {% else %}
