upsated favicons and video tours

--- a/GoEstates/broker/templates/broker/home.html
+++ b/GoEstates/broker/templates/broker/home.html
@@ -11,8 +11,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="{%static 'property/assets/img/favicon.png' %}" rel="icon">
-  <link href="{%static 'property/assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
+  <!-- <link href="{%static 'property/assets/img/favicon.png' %}" rel="icon"> -->
+  <link href="{%static 'property/assets/img/letter-v.png' %}">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -155,16 +155,16 @@
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand" href="{% url 'properties:home' %}">Vita<span class="color-b">Agents</span></a>
+      <a class="navbar-brand text-brand" href=" ">Vita<span class="color-b">Agents</span></a>
 
       <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
         <ul class="navbar-nav">
 
           <li class="nav-item">
-            <a class="nav-link active" href="{% url 'properties:home' %}">Home</a>
+            <a class="nav-link active" href=" ">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="{% url 'properties:property' %}">Manage Properties</a>
+            <a class="nav-link " href=" ">Manage Properties</a>
           </li>
           <li class="nav-item">
             <a class="nav-link mr-4" href=" ">Markets</a>
