--- a/GoEstates/properties/templates/property/base.html
+++ b/GoEstates/properties/templates/property/base.html
@@ -11,8 +11,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="{%static 'property/assets/img/favicon.png' %}" rel="icon">
-  <link href="{%static 'property/assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
+  <link href="{%static 'property/assets/img/letter-v.png' %}" rel="icon" type="image/png">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -224,14 +223,70 @@
         <div class="col-md-4">
           <div class="card-box-d">
             <div class="card-img-d">
-              <img src="{%static 'property/assets/img/agent-4.jpg' %}" alt="" class="img-d img-fluid">
+              <img src="{%static 'property/assets/img/sandra.jpg' %}" alt="" class="img-d img-fluid">
             </div>
             <div class="card-overlay card-overlay-hover">
               <div class="card-header-d">
                 <div class="card-title-d align-self-center">
                   <h3 class="title-d">
-                    <a href="agent-single.html" class="link-two">Margaret Sotillo
+                    <a href=" " class="link-two">Maria Sandra
                       <br> Escala</a>
+                  </h3>
+                </div>
+              </div>
+              <div class="card-body-d">
+                <p class="content-d color-text-a">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt dolores adipisci necessitatibus nesciunt placeat maxime, voluptas aliquam velit blanditiis, voluptate alias praesentium quaerat recusandae rerum? Tempora nulla ipsa sit perspiciatis?
+                </p>
+                <div class="info-agents color-a">
+                  <p>
+                    <strong>Phone: </strong> +256 756 945234
+                  </p>
+                  <p>
+                    <strong>Email: </strong> agents@example.com
+                  </p>
+                </div>
+              </div>
+              <div class="card-footer-d">
+                <div class="socials-footer d-flex justify-content-center">
+                  <ul class="list-inline">
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="bi bi-facebook" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="bi bi-twitter" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="bi bi-instagram" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="bi bi-linkedin" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card-box-d">
+            <div class="card-img-d">
+              <img src="{%static 'property/assets/img/mark.jpg' %}" alt="" class="img-d img-fluid">
+            </div>
+            <div class="card-overlay card-overlay-hover">
+              <div class="card-header-d">
+                <div class="card-title-d align-self-center">
+                  <h3 class="title-d">
+                    <a href=" " class="link-two">Steven Karungi
+                      <br> Mark</a>
                   </h3>
                 </div>
               </div>
@@ -280,14 +335,14 @@
         <div class="col-md-4">
           <div class="card-box-d">
             <div class="card-img-d">
-              <img src="{%static 'property/assets/img/agent-1.jpg' %}" alt="" class="img-d img-fluid">
+              <img src="{%static 'property/assets/img/sentamu.jpg' %}" alt="" class="img-d img-fluid">
             </div>
             <div class="card-overlay card-overlay-hover">
               <div class="card-header-d">
                 <div class="card-title-d align-self-center">
                   <h3 class="title-d">
-                    <a href="agent-single.html" class="link-two">Stiven Spilver
-                      <br> Darw</a>
+                    <a href=" " class="link-two">Sentamu Toledo
+                      <br> Micheal</a>
                   </h3>
                 </div>
               </div>
@@ -297,63 +352,7 @@
                 </p>
                 <div class="info-agents color-a">
                   <p>
-                    <strong>Phone: </strong> +54 356 945234
-                  </p>
-                  <p>
-                    <strong>Email: </strong> agents@example.com
-                  </p>
-                </div>
-              </div>
-              <div class="card-footer-d">
-                <div class="socials-footer d-flex justify-content-center">
-                  <ul class="list-inline">
-                    <li class="list-inline-item">
-                      <a href="#" class="link-one">
-                        <i class="bi bi-facebook" aria-hidden="true"></i>
-                      </a>
-                    </li>
-                    <li class="list-inline-item">
-                      <a href="#" class="link-one">
-                        <i class="bi bi-twitter" aria-hidden="true"></i>
-                      </a>
-                    </li>
-                    <li class="list-inline-item">
-                      <a href="#" class="link-one">
-                        <i class="bi bi-instagram" aria-hidden="true"></i>
-                      </a>
-                    </li>
-                    <li class="list-inline-item">
-                      <a href="#" class="link-one">
-                        <i class="bi bi-linkedin" aria-hidden="true"></i>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card-box-d">
-            <div class="card-img-d">
-              <img src="{%static 'property/assets/img/agent-5.jpg' %}" alt="" class="img-d img-fluid">
-            </div>
-            <div class="card-overlay card-overlay-hover">
-              <div class="card-header-d">
-                <div class="card-title-d align-self-center">
-                  <h3 class="title-d">
-                    <a href="agent-single.html" class="link-two">Emma Toledo
-                      <br> Cascada</a>
-                  </h3>
-                </div>
-              </div>
-              <div class="card-body-d">
-                <p class="content-d color-text-a">
-                  Sed porttitor lectus nibh, Cras ultricies ligula sed magna dictum porta two.
-                </p>
-                <div class="info-agents color-a">
-                  <p>
-                    <strong>Phone: </strong> +54 356 945234
+                    <strong>Phone: </strong> +225 356 945234
                   </p>
                   <p>
                     <strong>Email: </strong> agents@example.com
@@ -403,7 +402,7 @@
               <h2 class="title-a">Latest News</h2>
             </div>
             <div class="title-link">
-              <a href="blog-grid.html">All News
+              <a href=" ">All News
                 <span class="bi bi-chevron-right"></span>
               </a>
             </div>
@@ -450,7 +449,7 @@
                   </div>
                   <div class="card-title-b">
                     <h2 class="title-2">
-                      <a href="blog-single.html">Travel is comming
+                      <a href=" ">Travel is comming
                         <br> new</a>
                     </h2>
                   </div>
@@ -474,7 +473,7 @@
                   </div>
                   <div class="card-title-b">
                     <h2 class="title-2">
-                      <a href="blog-single.html">Park is comming
+                      <a href=" ">Park is comming
                         <br> new</a>
                     </h2>
                   </div>
@@ -494,11 +493,11 @@
               <div class="card-overlay">
                 <div class="card-header-b">
                   <div class="card-category-b">
-                    <a href="#" class="category-b">Travel</a>
+                    <a href="" class="category-b">Travel</a>
                   </div>
                   <div class="card-title-b">
                     <h2 class="title-2">
-                      <a href="#">Travel is comming
+                      <a href=" ">Travel is comming
                         <br> new</a>
                     </h2>
                   </div>
@@ -538,7 +537,7 @@
               <div class="row">
                 <div class="col-sm-12 col-md-6">
                   <div class="testimonial-img">
-                    <img src="{%static 'property/assets/img/testimonial-1.jpg' %}" alt="" class="img-fluid">
+                    <img src="{%static 'property/assets/img/test-1.jpg' %}" alt="" class="img-fluid">
                   </div>
                 </div>
                 <div class="col-sm-12 col-md-6">
@@ -553,7 +552,7 @@
                     </p>
                   </div>
                   <div class="testimonial-author-box">
-                    <img src="assets/img/mini-testimonial-1.jpg" alt="" class="testimonial-avatar">
+                    <img src="{%static 'property/assets/img/test-1.jpg' %}" alt="" class="testimonial-avatar rounded-lg">
                     <h5 class="testimonial-author">Albert & Erika</h5>
                   </div>
                 </div>
