"Updated detail page"

--- a/GoEstates/properties/templates/property/base.html
+++ b/GoEstates/properties/templates/property/base.html
@@ -24,6 +24,7 @@
 
   <!-- Template Main CSS File -->
   <link href="{%static 'property/assets/css/style.css' %}" rel="stylesheet">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css">
   <!-- =======================================================
   * Template Name: EstateAgency
@@ -798,6 +799,7 @@
   </script>
 
   <!-- Vendor JS Files -->
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
   <script src="{%static 'property/assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
   <script src="{%static 'property/assets/vendor/swiper/swiper-bundle.min.js' %}"></script>
   <script src="{%static 'property/assets/vendor/php-email-form/validate.js' %}"></script>
