--- a/GoEstates/properties/templates/property/details.html
+++ b/GoEstates/properties/templates/property/details.html
@@ -27,16 +27,13 @@
                 <div id="main-slider" class="splide">
                     <div class="splide__track">
                         <ul class="splide__list">
-                            {%for img in images%}
+                            {% for img in images %}
                             <li class="splide__slide">
-                                <img src="{{img.property_image.url}}">
+                                <img src="{{ img.property_image.url }}">
                             </li>
-                            {%endfor%}
+                            {% endfor %}
                             <li class="splide__slide">
-                                <img src="{{property.image.url}}">
-                            </li>
-                            <li class="splide__slide">
-                                <img src="{{property.image.url}}">
+                                <img src="{{ property.image.url }}">
                             </li>
                         </ul>
                     </div>
@@ -45,19 +42,13 @@
                 <div id="thumbnail-slider" class="splide">
                     <div class="splide__track">
                         <ul class="splide__list">
-                            {%for img in images%}
+                            {% for img in images %}
                             <li class="splide__slide">
-                                <img src="{{img.property_image.url}}">
+                                <img src="{{ img.property_image.url }}">
                             </li>
-                            {%endfor%}
+                            {% endfor %}
                             <li class="splide__slide">
-                                <img src="{{property.image.url}}">
-                            </li>
-                            <li class="splide__slide">
-                                <img src="{{property.image.url}}">
-                            </li>
-                            <li class="splide__slide">
-                                <img src="{{property.image.url}}">
+                                <img src="{{ property.image.url }}">
                             </li>
                         </ul>
                     </div>
@@ -71,16 +62,6 @@
 
                 <div class="row justify-content-between">
                     <div class="col-md-5 col-lg-4">
-                        <!-- <div class="property-price d-flex justify-content-center foo">
-                            <div class="card-header-c d-flex">
-                                <div class="card-box-ico">
-                                    <span class="bi bi-cash">shs</span>
-                                </div>
-                                <div class="card-title-c align-self-center">
-                                    <h5 class="title-c">{{property.price | intcomma}}</h5>
-                                </div>
-                            </div>
-                        </div> -->
                         <div class="property-summary">
                             <div class="row">
                                 <div class="col-sm-12">
@@ -93,33 +74,31 @@
                                 <ul class="list">
                                     <li class="d-flex justify-content-between">
                                         <strong>Property ID:</strong>
-                                        <span>{{property.id}}</span>
+                                        <span>{{ property.id }}</span>
                                     </li>
                                     <li class="d-flex justify-content-between">
                                         <strong>Location:</strong>
-                                        <span>{{property.location}}</span>
+                                        <span>{{ property.location }}</span>
                                     </li>
                                     <li class="d-flex justify-content-between">
                                         <strong>Property Type:</strong>
-                                        <span>{{property.category}}</span>
+                                        <span>{{ property.category }}</span>
                                     </li>
                                     <li class="d-flex justify-content-between">
                                         <strong>Status:</strong>
-                                        <span>{{property.condition}}</span>
+                                        <span>{{ property.condition }}</span>
                                     </li>
                                     <li class="d-flex justify-content-between">
                                         <strong>Area:</strong>
-                                        <span>{{property.sqft}}
-                                            <sup>2</sup>
-                                        </span>
+                                        <span>{{ property.sqft }}<sup>2</sup></span>
                                     </li>
                                     <li class="d-flex justify-content-between">
                                         <strong>Beds:</strong>
-                                        <span>{{property.bedrooms}}</span>
+                                        <span>{{ property.bedrooms }}</span>
                                     </li>
                                     <li class="d-flex justify-content-between">
                                         <strong>Baths:</strong>
-                                        <span>{{property.bathrooms}}</span>
+                                        <span>{{ property.bathrooms }}</span>
                                     </li>
                                 </ul>
                             </div>
@@ -135,19 +114,7 @@
                         </div>
                         <div class="property-description">
                             <p class="description color-text-a">
-                                Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-                                Donec velit
-                                neque, auctor sit amet
-                                aliquam vel, ullamcorper sit amet ligula. Cras ultricies ligula sed magna dictum porta.
-                                Curabitur aliquet quam id dui posuere blandit. Mauris blandit aliquet elit, eget
-                                tincidunt
-                                nibh pulvinar quam id dui posuere blandit.
-                            </p>
-                            <p class="description color-text-a no-margin">
-                                Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Donec rutrum congue leo
-                                eget
-                                malesuada. Quisque velit nisi,
-                                pretium ut lacinia in, elementum id enim. Donec sollicitudin molestie malesuada.
+                                {{ property.description }}
                             </p>
                         </div>
                         <div class="row section-t3">
@@ -159,15 +126,9 @@
                         </div>
                         <div class="amenities-list color-text-a">
                             <ul class="list-a no-margin">
-                                <li>Balcony</li>
-                                <li>Outdoor Kitchen</li>
-                                <li>Cable Tv</li>
-                                <li>Deck</li>
-                                <li>Tennis Courts</li>
-                                <li>Internet</li>
-                                <li>Parking</li>
-                                <li>Sun Room</li>
-                                <li>Concrete Flooring</li>
+                                {% for amenity in property.amenities %}
+                                <li>{{ amenity }}</li>
+                                {% endfor %}
                             </ul>
                         </div>
                     </div>
@@ -176,35 +137,83 @@
             <div class="col-md-10 offset-md-1">
                 <ul class="nav nav-pills-a nav-pills mb-3 section-t3" id="pills-tab" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" id="pills-video-tab" data-bs-toggle="pill" href="#pills-video"
-                            role="tab" aria-controls="pills-video" aria-selected="true">Video Tour</a>
+                        <a class="nav-link active" id="pills-video-tab" data-bs-toggle="pill" href="#pills-video" role="tab" aria-controls="pills-video" aria-selected="true">Video Tour</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="pills-map-tab" data-bs-toggle="pill" href="#pills-map" role="tab"
-                            aria-controls="pills-map" aria-selected="false">NeighbourHood</a>
+                        <a class="nav-link" id="pills-map-tab" data-bs-toggle="pill" href="#pills-map" role="tab" aria-controls="pills-map" aria-selected="false">Neighbourhood</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="pills-plans-tab" data-bs-toggle="pill" href="#pills-plans" role="tab"
-                            aria-controls="pills-plans" aria-selected="false">Booking and Payment Plans</a>
+                        <a class="nav-link" id="pills-plans-tab" data-bs-toggle="pill" href="#pills-plans" role="tab" aria-controls="pills-plans" aria-selected="false">Booking and Payment Plans</a>
                     </li>
                 </ul>
                 <div class="tab-content" id="pills-tabContent">
-                    {% if video %}
                     <div class="tab-pane fade show active" id="pills-video" role="tabpanel" aria-labelledby="pills-video-tab">
                         <video width="100%" height="460" controls>
-                            <source src="{{video.video.url}}">
-                          </video>
+                            <source src="{{ video.video.url }}">
+                        </video>
                     </div>
-                    {% else %}
-                    <h1>There is no video for this property</h1>
-                    {%endif%}
                     <div class="tab-pane fade" id="pills-map" role="tabpanel" aria-labelledby="pills-map-tab">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.1422937950147!2d-73.98731968482413!3d40.75889497932681!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25855c6480299%3A0x55194ec5a1ae072e!2sTimes+Square!5e0!3m2!1ses-419!2sve!4v1510329142834"
-                            width="100%" height="460" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.1422937950147!2d-73.98731968482413!3d40.75889497932681!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25855c6480299%3A0x55194ec5a1ae072e!2sTimes+Square!5e0!3m2!1ses-419!2sve!4v1510329142834" width="100%" height="460" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
-                    <div class="tab-pane fade show active">
-    
+                    <div class="tab-pane fade" id="pills-plans" role="tabpanel" aria-labelledby="pills-plans-tab">
+                        <div class="card border-secondary">
+                            <div class="card-header bg-blue-200 border-0">
+                                <h4 class="font-weight-semi-bold m-0 text-center">Booking Details</h4>
+                            </div>
+                            <div class="card-body">
+                                <form>
+                                    <div class="form-group">
+                                        <label for="exampleInputEmail1">Email address</label>
+                                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                    </div>
+                                    <div class="form-group mt-2">
+                                        <label for="exampleInputPassword1">Details</label>
+                                        <textarea class="form-control" placeholder="eg. the time you will be available, the date, what you want to be covered at the appointment etc...."></textarea>
+                                    </div>
+                                    <button type="submit" class="btn btn-block btn-success my-3 py-2 font-semibold">Book Now</button>
+                                </form>
+                                <hr class="bold mt-0">
+                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#paymentModal">
+                                    Choose Payment Method Now
+                                  </button>
+                                  
+                                  <!-- Modal -->
+                                  <div class="modal fade" id="paymentModal" tabindex="-1" aria-labelledby="paymentModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                      <div class="modal-content">
+                                        <div class="modal-header">
+                                          <h5 class="modal-title" id="paymentModalLabel">Choose Payment Method</h5>
+                                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                          <ul class="list-group">
+                                            <li class="list-group-item">
+                                              <input type="radio" id="creditCard" name="paymentMethod" value="creditCard">
+                                              <label for="creditCard">Credit Card</label>
+                                            </li>
+                                            <li class="list-group-item">
+                                              <input type="radio" id="paypal" name="paymentMethod" value="paypal">
+                                              <label for="paypal">PayPal</label>
+                                            </li>
+                                            <li class="list-group-item">
+                                              <input type="radio" id="bankTransfer" name="paymentMethod" value="bankTransfer">
+                                              <label for="bankTransfer">Bank Transfer</label>
+                                            </li>
+                                            <li class="list-group-item">
+                                              <input type="radio" id="mobileMoney" name="paymentMethod" value="mobileMoney">
+                                              <label for="mobileMoney">Mobile Money</label>
+                                            </li>
+                                          </ul>
+                                        </div>
+                                        <div class="modal-footer">
+                                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                          <button type="button" class="btn btn-primary">Proceed with Payment</button>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -218,16 +227,13 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 col-lg-4">
-                        <img src="{%static 'property/assets/img/Agent.jpg' %}" alt="" class="img-fluid">
+                        <img src="{% static 'property/assets/img/Agent.jpg' %}" alt="" class="img-fluid">
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="property-agent">
                             <h4 class="title-agent">Pius Mayanja</h4>
                             <p class="color-text-a">
-                                Nulla porttitor accumsan tincidunt. Vestibulum ac diam sit amet quam vehicula elementum
-                                sed sit amet
-                                dui. Quisque velit nisi,
-                                pretium ut lacinia in, elementum id enim.
+                                Nulla porttitor accumsan tincidunt. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
                             </p>
                             <ul class="list-unstyled">
                                 <li class="d-flex justify-content-between">
@@ -279,20 +285,17 @@
                                 <div class="row">
                                     <div class="col-md-12 mb-1">
                                         <div class="form-group">
-                                            <input type="text" class="form-control form-control-lg form-control-a"
-                                                id="inputName" placeholder="Name *" required>
+                                            <input type="text" class="form-control form-control-lg form-control-a" id="inputName" placeholder="Name *" required>
                                         </div>
                                     </div>
                                     <div class="col-md-12 mb-1">
                                         <div class="form-group">
-                                            <input type="email" class="form-control form-control-lg form-control-a"
-                                                id="inputEmail1" placeholder="Email *" required>
+                                            <input type="email" class="form-control form-control-lg form-control-a" id="inputEmail1" placeholder="Email *" required>
                                         </div>
                                     </div>
                                     <div class="col-md-12 mb-1">
                                         <div class="form-group">
-                                            <textarea id="textMessage" class="form-control" placeholder="Comment *"
-                                                name="message" cols="45" rows="8" required></textarea>
+                                            <textarea id="textMessage" class="form-control" placeholder="Comment *" name="message" cols="45" rows="8" required></textarea>
                                         </div>
                                     </div>
                                     <div class="col-md-12 mt-3">
