--- a/GoEstates/users/templates/user/login.html
+++ b/GoEstates/users/templates/user/login.html
@@ -34,6 +34,15 @@
                         <input type="submit" name="signin" id="signin" class="form-submit" value="Log in"/>
                     </div>
                 </form>
+                {% if form.errors or form.non_field_errors %}
+                <div class="mb-3 p-3 text-danger rounded-xl">
+                    {% for field in form %}
+                    {{ field.errors }}
+                    {% endfor %}
+
+                    {{ form.non_field_errors }}
+                </div>
+                {% endif %}
                 <div class="social-login">
                     <span class="social-label">Or login with</span>
                     <ul class="socials">
